# writer-tool

./: AGENTS.md  LICENSE  README.md  example-config.toml
cli/: Cargo.toml
cli/src/: cli_logger.rs  main.rs
core/: Cargo.toml
core/src/: ai_actor.rs  command_entry.rs  config.rs  lib.rs  logger.rs  prompt_surrounding.rs  rejection_detection.rs  retrier.rs  translation.rs  writing.rs
obsidian-plugin/: .gitignore  AGENTS.md  README.md  eslint.config.mts  manifest.json  package.json  pnpm-lock.yaml  styles.css
obsidian-plugin/src/: logger.ts  main.ts  profile-config.ts  profile-descriptions.ts  profile-modal.ts  runner.ts  settings-tab.ts  settings.ts  task-modal.ts  types.ts  wasm.ts
wasm/: AGENTS.md  Cargo.toml  README.md
wasm/src/: bindings.rs  lib.rs
