[package]
name = "writer-tool-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
anyhow = "1"
js-sys = "0.3"
pin-project-lite = "0.2"
reqwest = { version = "0.13", features = ["json"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
toml = "1.1.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
writer-tool-core = { path = "../core" }
